# path-of-taxation

./: .gitattributes  .gitignore  Cargo.toml  README.md  test_game.sh
client/: Cargo.toml
client/src/: app_state.rs  main.rs
client/src/components/: boss.rs  combat.rs  enemy.rs  items.rs  mod.rs  player.rs
client/src/content/: abilities.rs  combat_feel.rs  enemies.rs  loading_tips.rs  mod.rs
client/src/dorfromantik/: mod.rs
client/src/plugins/: audio.rs  boss.rs  camera.rs  combat.rs  enemies.rs  hub.rs  input.rs  loot.rs  mod.rs  patch_notes.rs  pause.rs  player.rs  run.rs  ui.rs  vfx.rs
client/src/rendering/: isometric.rs  mod.rs  sprites.rs
docs/: AAA-ROADMAP.md  CONTENT-PIPELINE.md  DORFROMANTIK-CONFIDENCE-PLAN.md  DORFROMANTIK-RESEARCH-STACK.md  DORFROMANTIK-RESTART-PLAN.md  FRESH-START-PLAN.md  GAME-DEV-PLAN.md  HEX-MAP-BUILDER.md  NEXT-SESSION-PRIORITIES.md  RENDERING-UPGRADE.md  SESSION-RETROSPECTIVE.md  VISUAL-FIXES-PLAN.md  architecture.md  critique.md  game-plan.md  implementation-roadmap.md  refactor-status.md  vertical-slice.md
game_agent/: README.md  VISUAL_QUALITY_RESEARCH.md  __init__.py  __main__.py  action_schema.py  config.py  critic_cli.py  game_loop.py  input_control.py  logger.py  main.py  prompts.py  requirements.txt  screen_capture.py  vision_agent.py  visual_critic.py  window_control.py
server/: Cargo.toml
server/src/: lib.rs
server/src/reducers/: combat.rs  debate.rs  lifecycle.rs  mod.rs  run_flow.rs
server/src/tables/: combat.rs  debate.rs  events.rs  items.rs  mod.rs  player.rs  run.rs  skills.rs
shared/: Cargo.toml
(+28 files in other folders)
