[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Maxwell Software Solutions"]
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
ron = "0.9"
rand = "0.9"
glam = "0.29"
thiserror = "4"

# Client
bevy = "0.18"

# Server
spacetimedb = "2"
