[package]
name = "pot-server"
description = "Path of Taxation - SpacetimeDB server module"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { workspace = true }
serde = { workspace = true }
serde_json = "1"
log = "0.4"
